🎨 Fix missing spacing and z-index problems

--- a/src/scss/modules/_app.scss
+++ b/src/scss/modules/_app.scss
@@ -58,6 +58,7 @@
       justify-content: center;
       align-items: center;
       flex: 0 1 auto;
+      margin-right: 0.5em;
       border: solid 10px theme-color('primary');
       border-radius: 1000em;
       color: theme-color('secondary');
