--- a/src/scss/modules/_layout.scss
+++ b/src/scss/modules/_layout.scss
@@ -117,6 +117,7 @@ hr {
 .modal {
   .close {
     position: absolute;
+    z-index: 5;
     right: 1rem;
     top: 1rem;
   }
